--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ever-vision",
-  "version": "0.0.0",
+  "name": "ar-scp",
+  "version": "0.0.1",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,10 +9,7 @@
     "ui": "vue ui"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.182",
-    "vue": "^3.2.20",
-    "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vue": "^3.2.20"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.2",
@@ -21,9 +18,7 @@
     "@vue/cli": "4.5.13",
     "@vue/cli-plugin-babel": "4.5.13",
     "@vue/cli-plugin-eslint": "4.5.13",
-    "@vue/cli-plugin-router": "4.5.13",
     "@vue/cli-plugin-typescript": "4.5.13",
-    "@vue/cli-plugin-vuex": "4.5.13",
     "@vue/cli-service": "4.5.13",
     "@vue/compiler-sfc": "^3.2.20",
     "@vue/eslint-config-standard": "^6.1.0",
